welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: identifier expected but ')' found.
while (estSurMessage():) {
                       ^BDRBuggle:75: error: ')' expected but '}' found.
	}
        ^